--- a/stcmd.template
+++ b/stcmd.template
@@ -1,14 +1,11 @@
-#!/bin/sh
-set -e
-
-version=VERSION_TO_CHANGE
-
-if [ -z "$ST_WORKING_FOLDER" ]
-then
-      echo "\$ST_WORKING_FOLDER is empty. It should have the absolute path to the source code working folder."
-      exit 1
-fi
-
-docker run -it --rm \
-    -v $ST_WORKING_FOLDER:'/tmp' \
-    DOCKER_ACCOUNT/atarist-toolkit-docker:${version} $@
+#!/bin/bash\n
+if [ -z "*VERSION" ]\n
+then\n
+    VERSION="latest"\n
+fi\n
+if [ -z "*ST_WORKING_FOLDER" ]\n
+then\n
+      echo 'ST_WORKING_FOLDER is empty. It should have the absolute path to the source code working folder.'\n
+      exit 1\n
+fi\n
+docker run -it --rm  -v *ST_WORKING_FOLDER:'/tmp' logronoide/atarist-toolkit-docker:*VERSION *@\n
