--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,11 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - 'T*'
+  workflow_run:
+    workflows: ["Publish"]
+    branches: [main]
+    types: 
+      - completed
 
 jobs:
   release:
