Trigger release when new version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: [Publish]
-    push:
-      tags: v*
-    types: 
-      - completed
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   release:
