--- a/demo/C_LIBCMINI/Makefile
+++ b/demo/C_LIBCMINI/Makefile
@@ -1,4 +1,4 @@
-CC= ../../st gcc
+CC= stcmd gcc
 LIBCMINI=/freemint/libcmini/lib
 CFLAGS=-std=gnu99 -I/freemint/libcmini/include -nostdlib $(LIBCMINI)/crt0.o 
 LINKFLAGS=-s -L$(LIBCMINI) -lcmini -lgcc
