--- a/stcmd.template
+++ b/stcmd.template
@@ -8,4 +8,7 @@ then\n
       echo 'ST_WORKING_FOLDER is empty. It should have the absolute path to the source code working folder.'\n
       exit 1\n
 fi\n
-docker run -it --rm  -v *ST_WORKING_FOLDER:'/tmp' logronoide/atarist-toolkit-docker:*VERSION *@\n
+ARCH=`arch`\n
+THEDOCKER="logronoide/atarist-toolkit-docker-*{ARCH}:*{VERSION}"\n
+
+docker run -it --rm  -v *ST_WORKING_FOLDER:'/tmp' *THEDOCKER *@\n
