Worked around complicated sed. We can now build any Linux platform so only need a single installer anyhow.

--- a/stcmd.template
+++ b/stcmd.template
@@ -10,6 +10,7 @@ then\n
 fi\n
 ARCH=`arch`\n
 THEDOCKER="logronoide/atarist-toolkit-docker-*{ARCH}:*{VERSION}"\n
-THEUSER=`id -u`\n
-THEGROUP=`id -g`\n
+# We pass THEUSER and THE GROUP from wrapper script as ENV variables\n
+THEUSER='`id -u`'\n
+THEGROUP='`id -g`'\n
 docker run -it --rm  -v *ST_WORKING_FOLDER:'/tmp' --user "*{THEUSER}:*{THEGROUP}" *THEDOCKER *@\n
