--- a/install/linux.sh.template
+++ b/install/linux.sh.template
@@ -8,20 +8,34 @@ else
 fi
 
 VERSION=$1
-ARCH=`arch`
 if [ $# -eq 0 ]
   then
     echo "No version supplied. Using latest version."
     VERSION="latest"
 fi
+ARCH=`arch`
 
 THEDOCKER="logronoide/atarist-toolkit-docker-${ARCH}:${VERSION}"
 echo "Pulling image ${THEDOCKER}..."
 docker pull ${THEDOCKER}
 
 echo "Installing the command stcmd in /usr/local/bin. Please enter your root password if prompted..."
-cat <<EOF > /usr/local/bin/stcmd
-STCMD_COMMAND
+cat << EOF > /usr/local/bin/stcmd
+#!/bin/bash
+if [ -z "\$VERSION" ]
+then
+    VERSION="latest"
+fi
+if [ -z "\$ST_WORKING_FOLDER" ]
+then
+      echo 'ST_WORKING_FOLDER is empty. It should have the absolute path to the source code working folder.'
+      exit 1
+fi
+ARCH=`arch`
+THEDOCKER="logronoide/atarist-toolkit-docker-\${ARCH}:\${VERSION}"
+THEUSER=\$(id -u)
+THEGROUP=\$(id -g)
+docker run -it --rm  -v \${ST_WORKING_FOLDER}:'/tmp' --user "\${THEUSER}:\${THEGROUP}" \${THEDOCKER} \$@
 EOF
 
 chmod +x /usr/local/bin/stcmd
