Tested RPi Docker - fixed makefiles and added workflows to README.md

--- a/demo/ASM/Makefile
+++ b/demo/ASM/Makefile
@@ -1,4 +1,5 @@
-OUT = build/hello.tos
+BDIR = build
+OUT = $(BDIR)/hello.tos
 VASM_FLAGS = -Felf
 VASM = vasm
 VLINK = vlink
@@ -10,10 +11,12 @@ _OBJS = hello.o
 OBJS = $(patsubst %,$(ODIR)/%,$(_OBJS))
 
 $(ODIR)/%.o: $(SDIR)/%.s
+	@mkdir -p $(@D)
 	$(VASM) $^ -o $@ $(VASM_FLAGS)
 
 .PHONY: build
 build: $(OBJS)
+	@mkdir -p $(BDIR)
 	$(VLINK) $^ -bataritos -o $(OUT)
 
 .PHONY: clean
