Makefile tweak to enable C TOS demo to run from HDD

--- a/demo/C/Makefile
+++ b/demo/C/Makefile
@@ -2,6 +2,9 @@ IDIR = include
 CC = m68k-atari-mint-gcc
 CFLAGS = -I$(IDIR)
 
+# Use traditional header and reserve 32KB stack to fix 3-bomb crash when run from HDD
+TOSLDFLAGS = -Wl,--traditional-format,--stack=32768
+
 ODIR = obj
 SDIR = src
 LDIR = lib
@@ -17,7 +20,7 @@ OBJS = $(patsubst %,$(ODIR)/%,$(_OBJS))
 
 $(ODIR)/%_bb.tos: $(SDIR)/%_bb.c $(DEPS)
 	@mkdir -p $(@D)
-	$(CC) $^ -o $@ $(CFLAGS)
+	$(CC) $^ -o $@ $(CFLAGS) $(TOSLDFLAGS)
 
 $(ODIR)/%_ge.prg: $(SDIR)/%_ge.c $(DEPS)
 	@mkdir -p $(@D)
