--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-24.04
+    steps:
     - uses: actions/checkout@v2
     - name: Run - build
       run: make build
